# discord-linked-roles

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: config.py  fastapi_.py  register.py
linked_roles/: __init__.py  client.py  enums.py  errors.py  http.py  oauth2.py  role.py  user.py  utils.py
tests/: test_client.py
